Added Navigation to the project.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,5 +3,6 @@
   "hello": "Hello, {{name}}!",
   "login": "Login",
   "logout": "Logout",
-  "settings": "Settings"
+  "settings": "Settings",
+  "changeLanguage": "Change Language"
 }
