--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -3,5 +3,6 @@
   "hello": "こんにちは、{{name}}！",
   "login": "ログイン",
   "logout": "ログアウト",
-  "settings": "設定"
+  "settings": "設定",
+  "changeLanguage": "言語を変更"
 }
