Home screen design and change language

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,5 +4,6 @@
   "login": "Login",
   "logout": "Logout",
   "settings": "Settings",
-  "changeLanguage": "Change Language"
+  "changeLanguage": "Change Language",
+  "signup": "SignUp"
 }
