--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -4,5 +4,6 @@
   "login": "ログイン",
   "logout": "ログアウト",
   "settings": "設定",
-  "changeLanguage": "言語を変更"
+  "changeLanguage": "言語を変更",
+  "signup": "SignUp"
 }
