--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -5,5 +5,13 @@
   "logout": "ログアウト",
   "settings": "設定",
   "changeLanguage": "言語を変更",
-  "signup": "SignUp"
+  "signup": "サインアップ",
+  "email": "メール",
+  "next": "次",
+  "createAccount": "Axysアカウントを作成する",
+  "futureFinancialfreedom": "あなたの経済的自由の未来。もはや数字や小数点の話ではありません。それは、新たな発見の物語なのです。.",
+  "byCreating": "アカウントを作成することにより、私はAxysの",
+  "termsAndServices": "利用規約",
+  "privacyPolicy": "プライバシーポリシー",
+  "and": "そして"
 }
