Login UI Implemented.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,4 +14,5 @@
   "termsAndServices": "Terms of Service",
   "privacyPolicy": "Privacy Policy",
   "and": "and",
+  "loginAccount": "Login Axys account"
 }
