--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -13,5 +13,6 @@
   "byCreating": "アカウントを作成することにより、私はAxysの",
   "termsAndServices": "利用規約",
   "privacyPolicy": "プライバシーポリシー",
-  "and": "そして"
+  "and": "そして",
+  "loginAccount": "Axysアカウントにログイン"
 }
