--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -36,6 +36,6 @@
   "useBiometrics": "Use biometrics to quickly and securely log in",
   "proceed": "Proceed",
   "skip": "Skip",
-  "setupBiometrics": "Setup Biometrics"
-
+  "setupBiometrics": "Setup Biometrics",
+  "dashboard": "Dashboard",
 }
